apps/user/homepage/overlays/dev/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  labels:
    app.kubernetes.io/name: homepage
  name: homepage
spec:
  ports:
  - name: homepage
    protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: homepage
    task: homepage
  type: ClusterIP
