apps/user/homepage/overlays/dev/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:iUCaD/k48bWUZ/QdPc2toKiX,iv:0vNlJVQVBGEKhcf5BNcKmo1Ye+UVjEq+tNGPTKGBjIQ=,tag:KAnolSM200rJC+B0UJJYVg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: homepage
    name: homepage
    namespace: dev
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:b2FVxF3zXFki3xspSeUyfTu8yykJjLYmlHrjwwRPVagxUaQtKpRS,iv:YSJV49VGgqzhNzreBah6CbWmYtVTdd+AVcNy7/WbQ1M=,tag:UcDla1BLy76DVWUgDdi1Ww==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              port: 3000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:9NlUzVF0Q7ootoG2on/hKxfl,iv:GnUgPSQVHuJpcx+E0/tD6CWY3wiIWZ+T73073BpcF5c=,tag:ZNNhtEhUCsPgM+97ZdCqvQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:tdK6aptEAWhOhCbHmCLzCTr22g==,iv:V5AsuxYDdxY0HKpKcaQQNz8Cg16XucID95XCOIrl0lM=,tag:2+rDZFFGZK3X9f5odri1uw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5eEhwUnIxb1JYeFFPSm1B
[...]
            C2oU6tCJrlG1c+jmAg8QhBXlYOMLkplHxHDzU0grxUXYYOEGYj410A==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T15:17:41Z"
    mac: ENC[AES256_GCM,data:glZreXMIOHL0FcU95K+3MFWcwIIseuFeP/JRARyuVHQMkOG6pStys0+4KBTTrT7oSq+JFy7XAgWTD49Vjkqzng2swHZbdCU9v3Cjka5PPV7KdNlFNZAER4Qh9VGNBgquXJLrRqDLhBd5aqDaQOMySATJ8zqn+sFr4FJZ68SSA3E=,iv:eVgoPc7kZZNg3NHhz5UkDfa9DUrIFTuEWONNu5XDKDY=,tag:6c9hwCUTGSf7emfBJAt54Q==,type:str]
    pgp:
        - created_at: "2024-06-22T15:17:41Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//Q4DlhzFhnkzqO6irHb4gopt8XJT7KC6ZrkAhjX4r3EEp
[...]
            =NPbN
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
