apps/user/homepage/overlays/dev/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ON717EjozP0cgIkeg949Jmtb,iv:+1aeIX6Llc2d65bjFZeMZyNre2nXee5y0HTo7/zs6Jk=,tag:R0eQGEMftSnw41nT2T7YAg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: homepage
    name: homepage
    namespace: dev
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:quciIiuVK8yskT+NAkmBSPPC+YiXjzS9eu4OPiU7pxCKhp66dLV5,iv:1yRxGayP0Q5s2HgNF/R7dq5M7Ywt0244UwQHy24J9No=,tag:iEJXH8RnyvJJqX2ZuWLbbg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: homepage
              port: 3000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:F4oAngYTPxGklHEAF7kCqvfF,iv:X8TEwf/BfPUbmrfqHrwxm/vqE6+2QUqDoQ3Or7tQcIA=,tag:8Om69F9YpNvS6LkNPapXtw==,type:str]
              sans:
                - ENC[AES256_GCM,data:/xNgcF2GjZwLy9CJzsR3a9VaQg==,iv:5dqUZfRxBuYehySlHD2E9NP48EHfrXD43pw49M8jS6g=,tag:Z6kvUTSYiCm+GvJ+4fjvrg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: homepage-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBSMVcrNWlQcHRDRnp6Zmtz
[...]
            wj7URiBAtcXd/z/KQE98YADoCd/cMIgsQo6HE9gmkIXv8inkdz9KNQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T15:17:47Z"
    mac: ENC[AES256_GCM,data:p/Ct31J/VdsgRVcT4q6PMl8kHvsDS7Hsf1POQIokvyeL30ooEcRFlgpIaghZXB2Z/MEn2T29SOHZ+UlaAx2AgvWE9gHNpZLrDps8tpoNAjI+oQLEQyd5ka6A0k14xXcoPkbcvgX4/7dU9iWDd7oa+7IAYjMYmzVKr/Kp453nExc=,iv:rZFdV/T/ji981XwieUcDmMazCZAGOYFk+HfauAGDt0c=,tag:RKhUTIeQWlIUp7i+fMSk/w==,type:str]
    pgp:
        - created_at: "2024-06-22T15:17:47Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAsVfL7+g9i5qLdUAJCx2tcCWqXQIeKR3MFnSjYmtuTLKw
[...]
            =RSor
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
